crates/yamlito/tests/snapshots/parser__ast_snapshots@scalar__bool_false.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::ast_string(&tree)"
input_file: tests/yaml/scalar/bool_false.yml
---
Stream
  Document
    Scalar [plain] "false"
      decoded="false" value=Bool(false)
