crates/yamlito/tests/snapshots/parser__ast_snapshots@scalar__double_quoted.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::ast_string(&tree)"
input_file: tests/yaml/scalar/double_quoted.yml
---
Stream
  Document
    Scalar [double] "\"line\\nbreak\\ttab\""
      decoded="line\nbreak\ttab" value=String("line\nbreak\ttab")
