crates/yamlito/tests/snapshots/parser__ast_snapshots@scalar__empty.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::ast_string(&tree)"
input_file: tests/yaml/scalar/empty.yml
---
Stream
