crates/yamlito/tests/snapshots/parser__ast_snapshots@scalar__folded_block.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::ast_string(&tree)"
input_file: tests/yaml/scalar/folded_block.yml
---
Stream
  Document
    Scalar [folded] ">\n  folded\n  scalar\n"
      decoded="folded scalar\n" value=String("folded scalar\n")
