crates/yamlito/tests/snapshots/parser__ast_snapshots@scalar__literal_block.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::ast_string(&tree)"
input_file: tests/yaml/scalar/literal_block.yml
---
Stream
  Document
    Scalar [literal] "|\n  line one\n  line two\n"
      decoded="line one\nline two\n" value=String("line one\nline two\n")
