crates/yamlito/tests/snapshots/parser__ast_snapshots@scalar__null.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::ast_string(&tree)"
input_file: tests/yaml/scalar/null.yml
---
Stream
  Document
    Scalar [plain] "null"
      decoded="null" value=Null
